# Eval

./: .gitignore  README.md  SLURM_README.md  pyproject.toml
configs/: config_slurm_full.yaml  config_slurm_test.yaml  nemotron_nano_full.yaml  nemotron_nano_test.yaml
scripts/: run_slurm_full.sh  run_slurm_test.sh  setup_vllm_venv.sh
twinkle_eval/: config.py  config.template.yaml  dataset.py  evaluators.py  finalize.py  hf_uploader.py  main.py  merge.py  validators.py
